03.business-os/AICompanyManager/900.meta/department_task_ledger_v2_20260430_135127/030_verify.txt
[PASS] APP_ROOT exists
[PASS] index.html exists
[PASS] server file exists
[PASS] clean core exists
INDEX_HASH_BEFORE=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_BEFORE=b68d62cb140e09addeca66f68914ebf7a07309c1db019901cda8be934970b077
CORE_HASH_BEFORE=638a1eb6b724ac3edaf402daee0e1692d650484eba754429355fd7e5cebfb6b2
CANDIDATE_HASH_BEFORE=b68d62cb140e09addeca66f68914ebf7a07309c1db019901cda8be934970b077
[PASS] server/core backups created
[PASS] clean server candidate backup created
DDL_CODE=0
[PASS] department task ledger v2 DDL applied
[PASS] expected DB objects exist
patched server task ledger v2: /data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/server/aicm-local-ui-api-server.mjs
patched server task ledger v2: /data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/server/aicm-clean-v2-api-server.candidate.mjs
SERVER_PATCH_CODE=0
[PASS] server task ledger patch applied
SERVER_NODE_CHECK_CODE=0
[PASS] server node --check OK
core task ledger v2 patched
CORE_PATCH_CODE=0
[PASS] core task ledger patch applied
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:1084
        if (action === "task-ledger-create") {\n      createTaskLedgerFromForm();\n      return;\n    }\nif (action === "go") {
                                              ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
CORE_NODE_CHECK_CODE=1
[FAIL] clean core node --check failed
INDEX_HASH_AFTER=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_AFTER=800cdaac950dfff7e67e475384f2892e1bb113642772dab2b9353335bb32ebf4
CORE_HASH_AFTER=d4f795bf8467381943c7df68d28d4068ea52cfad7c12b09730015840489162eb
CANDIDATE_HASH_AFTER=800cdaac950dfff7e67e475384f2892e1bb113642772dab2b9353335bb32ebf4
[PASS] index.html unchanged
[PASS] server changed as expected
[PASS] clean core changed as expected
FORBIDDEN_COUNT=0
INDEX_SCRIPT_COUNT=1
TASK_ROUTE_COUNT=1
TASK_CONTEXT_COUNT=2
TASK_CORE_COUNT=2
[PASS] forbidden marker count OK
[PASS] production index still loads one script
[PASS] task ledger API route exists
[PASS] context includes task_ledger
[PASS] core task ledger action exists
[WARN] old local UI server killed by kill -9
SERVER_PID=18628
[PASS] production server restart attempted
CONTEXT_CURL_CODE=0
CONTEXT_HTTP_CODE=200
[PASS] context HTTP 200
[PASS] context result ok
[PASS] context returns task_ledger
INDEX_CURL_CODE=0
INDEX_HTTP_CODE=200
[PASS] production index HTTP 200
